--- a/index.css
+++ b/index.css
@@ -1,36 +1,19 @@
-body {
-    font-family: Helvectica;
+* {
+    font-family: cursive;
 }
 
 h1 {
-    background-image: url("https://content.codecademy.com/courses/freelance-1/unit-2/pattern.jpeg");   
-    font-size: 100px;
-    font-weight: bold;
-    color: khaki;
-    text-align: center;  
+    font-size: 50px;    
+    text-align: center;
 }
 
-h2 {
-    font-size: 32px;
-    font-weight: bold;
-    color: white;  
+p {
+    font-size: 25px;
+    
 }
 
-.brushes {
-    background-color: mediumspringgreen;
-}
-
-.frames {
-    background-color: lightcoral;
-}
-
-.paint {
-    background-color: skyblue;
-}
-
-span {
-    font-weight: bold;
-    color: blue;
+img {
+    margin: 0 400px 0 400px;     
 }
   
 
